<resources>
    <string name="app_name">DataBase</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="add_data">Add Data</string>
    <string name="rowid">Rowid</string>
    <string name="age1">Age</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="read">Read</string>
    <string name="name">Name</string>
    <string name="rollno">Rollno</string>
    <string name="pincode">Pincode</string>
</resources>